# EduGen

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements-ai.txt  requirements-data.txt  requirements-evaluation.txt  requirements-training.txt  requirements.txt
app/: streamlit_app.py
assets/: README.md
config/: README.md
database/: README.md
datasets/: README.md
docs/: AI_PIPELINE.md  DATA_PIPELINE.md  DEMO_WORKFLOW.md  DEPLOYMENT.md  DEVELOPMENT.md  EVALUATION.md  FOLDER_STRUCTURE.md  INSTALLATION.md  PROJECT_MEMORY.md  REPRODUCIBILITY.md
evaluation/: README.md
logs/: README.md
models/: README.md
notebooks/: README.md
outputs/: README.md
outputs/statistics/: length_distribution.csv
scripts/: README.md  smoke_check.py
src/edugen/: __init__.py
src/edugen/ai/: __init__.py  config.py  model_loader.py  model_registry.py  tokenizer.py
src/edugen/ai/data/: __init__.py  dataset_downloader.py  dataset_manager.py  (+9 more)
src/edugen/config/: config.py  constants.py  env_loader.py  logging_config.py  settings.py
src/edugen/core/: __init__.py  exceptions.py  validation.py
src/edugen/exports/: document_exporter.py  pdf_utils.py
src/edugen/storage/: __init__.py  history_repository.py  sqlite.py
src/edugen/ui/: __init__.py  content_parser.py  pages.py
src/edugen/utils/: text_utils.py
tests/: test_ai_pipeline.py  test_data_pipeline.py  test_evaluation_framework.py  test_foundation.py  test_frontend_support.py  test_project_smoke.py
training/: README.md
(+21 files in other folders)
