[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "edugen-ai"
version = "0.1.0"
description = "Open-source AI study assistant for generating educational materials."
requires-python = ">=3.10"
dependencies = [
    "streamlit",
]

[project.optional-dependencies]
ai = [
    "torch",
    "transformers",
    "sentencepiece",
    "accelerate",
]
training = [
    "datasets",
    "peft",
]
export = [
    "reportlab",
]
data = [
    "datasets",
    "matplotlib",
]
evaluation = [
    "bert-score",
    "rouge-score",
    "sacrebleu",
    "psutil",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]
